# py-package-template

./: .dockerignore  .gitiattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.rst  pyproject.toml  setup.cfg
data/: .note.rst
docs/: .note.rst  conf.py  docker_flowchart_mermaid.txt  docker_graph_mermaid.txt  example.rst  index.rst
logs/: .note.rst
plots/: .note.rst
resources/: .note.rst
scripts/: .note.rst  debugger.sh  runner.sh  start.sh  tester.sh
src/: .note.rst  __main__.py  app.py
src/a/: core.py
tests/: .note.rst  test_app.py
