[tool.poetry]
name = "sigint-package-template"
version = "0.1.0"
description = "SigInt Constellation Analyzer"
authors = ["Giacomo Pojani <giacomo.pojani@spire.com>"]
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "3.10.2" # Python version is fixed to be compatible with Scipy
cython = "^0.29.28"
sphinx = { version = "^4.4.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
numpy = "^1.22.2"
pyproj = "^3.3.0"
pymap3d = "^2.7.2"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
sklearn = "^0.0"
pyshp = "^2.2.0"
Shapely = "^1.8.1"
cartopy = "0.19.0.post1" # Cartopy verion is fixed to be compatible with Proj
pyephem = "^9.99" # From here dependencies of tlegen
pandas = "^1.4.1"
bokeh = "0.12.6"
mercantile = "^1.2.1"
requests = "^2.27.1"
spacetrack = "^0.13.7"
sgp4 = "^2.20"
future = "^0.18.2"
gitdb2 = "2.0.0"
GitPython = "^2.1.15"
pdoc3 = "^0.10.0"
imageio = "^2.16.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
black = "^22.1.0"
mypy = "^0.931"
isort = "^5.10.1"
debugpy = "^1.5.1"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme"]

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
