[tool.poetry]
name = "py-package-template"
version = "0.1.0"
description = "Python Package Template"
authors = ["Giacomo Pojani <giacomo.pj@hotmail.it>"]
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "3.10.2" # Python version is fixed to be compatible with Scipy
cython = "^0.29.28"
sphinx = { version = "^4.4.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
black = "^22.1.0"
mypy = "^0.931"
isort = "^5.10.1"
debugpy = "^1.5.1"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme"]

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
  )/
)
'''

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
testpaths = [
    "tests",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
